--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O Senhor dos Anéis</title>
+    <link rel="stylesheet" href="../dist/styles/main.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eaque nesciunt, assumenda magnam facere fuga aola mundoliquid voluptate commodi hic quasi asperiores doloribus recusandae debitis rem tenetur illo natus ea dicta.</p>
+    <header class="header">
+        <nav class="header__container">
+            <div class="header__logo">
+                <img class="header__logo__img" src="../dist/assets/images/ring-logo.png" alt="">
+                <h1 class="title--medium">O Senhor dos Anéis</h1>
+            </div>
+            <ul class="header__links text--small">
+                <li class="header__links__item"><a class="button__links" href="#">Sinopse</a></li>
+                <li class="header__links__item"><a class="button__links" href="#">Elenco-Mapa-Trailers</a></li>
+                <li class="header__links__item"><a class="button__links" href="#">Onde assistir</a></li>
+                <li class="header__links__item"><a class="button__links" href="#">Perguntas frequentes</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
