--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="header__container">
             <div class="header__logo">
-                <img class="header__logo__img" src="../dist/assets/images/ring-logo.png" alt="">
+                <img class="header__logo__img" src="../dist/assets/images/ring-logo.png" alt="Anel">
                 <h1 class="title--medium">O Senhor dos Anéis</h1>
             </div>
             <ul class="header__links text--small">
@@ -21,5 +21,8 @@
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <img class="hero__image" src="../dist/assets/images/hero/hero-title-vinheta.png" alt="Personagens do filme O Senhor dos Anéis">
+    </section>
 </body>
 </html>
