Create section sinopse

--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,41 @@
     <section class="hero">
         <img class="hero__image" src="../dist/assets/images/hero/hero-title-vinheta.png" alt="Personagens do filme O Senhor dos Anéis">
     </section>
+    <section class="sinopse">
+        <h2 class="sinopse__title title--big">Sinopses dos três filmes da trilogia O Senhor dos Anéis, de J.R.R. Tolkien, dirigidos por Peter Jackson</h2>
+        <article class="sinopse__movie">
+            <img class="sinopse__movie__poster" src="../dist/assets/images/section-sinopse/the-lord-of-the-rings-the-fellowship-of-the-ring.jpg" alt="Poster do filme O Senhor dos Anéis: A Sociedade do Anel (em inglês: The Lord of The rings - The Fellowship of The Ring)">
+            <div class="sinopse__movie__description">
+                <h3 class="title--medium">O Senhor dos Anéis: A Sociedade do Anel (2001)</h3>
+                <h5 class="sinopse__movie__description__subtitle text--small">The Lord of the Rings: The Fellowship of The Ring</h5>
+                <p class="sinopse__movie__description__text text-
+                -medium">
+                    Frodo Bolseiro, um hobbit simples do Condado, é encarregado de uma missão crucial: destruir um anel mágico que possui um poder maligno imenso. Com a ajuda de um grupo diverso, incluindo o mago Gandalf, o elfo Legolas, o anão Gimli, o humano Aragorn e outros companheiros, Frodo começa uma jornada perigosa para destruir o Anel, o qual é cobiçado pelo Senhor das Trevas Sauron, que deseja usá-lo para dominar o mundo. A história começa com a formação da Sociedade do Anel, composta pelos heróis que devem proteger o Anel e impedir Sauron de conquistar a Terra-média.
+                </p>
+            </div>
+        </article>
+        <article class="sinopse__movie">
+            <img class="sinopse__movie__poster" src="../dist/assets/images/section-sinopse/the-lord-of-the-ring-the-two-towers.jpg" alt="Poster do filme O Senhor dos Anéis: As Duas Torres (em inglês: The Lord of The rings - The Two Towers)">
+            <div class="sinopse__movie__description">
+                <h3 class="title--medium">O Senhor dos Anéis: As Duas Torres (2002)</h3>
+                <h5 class="sinopse__movie__description__subtitle text--small">The Lord of the Rings: The Two Towers</h5>
+                <p class="sinopse__movie__description__text text-
+                -medium">
+                    Após a separação da Sociedade, Frodo e Sam continuam sua jornada para o Monte da Perdição, onde o Anel deve ser destruído. Enquanto isso, Aragorn, Legolas e Gimli buscam resgatar o amigo Merry e Pippin, que foram capturados pelos orcs. Em Rohan, o rei Théoden é manipulado pelo servo de Sauron, Saruman, mas com a ajuda de Gandalf, Aragorn e seus aliados, ele começa a resistir. A guerra entre as forças do bem e do mal se intensifica, com a iminente batalha de Helm's Deep, onde os homens de Rohan enfrentam os exércitos de Saruman. Ao mesmo tempo, Frodo e Sam recebem a ajuda do misterioso Gollum, que os guia até Mordor, mas tem suas próprias intenções.
+                </p>
+            </div>
+        </article>
+        <article class="sinopse__movie">
+            <img class="sinopse__movie__poster" src="../dist/assets/images/section-sinopse/the-lord-of-the-rings-the-return-of-the-king.jpg" alt="Poster do filme O Senhor dos Anéis: O Retorno do Rei (em inglês: The Lord of The rings - The Return of The King)">
+            <div class="sinopse__movie__description">
+                <h3 class="title--medium">O Senhor dos Anéis: O Retorno do Rei (2003)</h3>
+                <h5 class="sinopse__movie__description__subtitle text--small">The Lord of the Rings: The Return of The King</h5>
+                <p class="sinopse__movie__description__text text-
+                -medium">
+                    A batalha final pela Terra-média começa. Aragorn reivindica seu destino como rei de Gondor, e, com a ajuda de seus amigos, lidera o exército de homens contra as forças de Sauron. Frodo e Sam, guiados por Gollum, estão cada vez mais próximos de Mordor, onde devem destruir o Anel. Enquanto isso, a grande guerra entre os exércitos de Sauron e as forças da liberdade culmina em uma batalha épica pelas portas de Minas Tirith. O destino de toda a Terra-média depende da coragem e da união dos heróis, enfrentando as forças da escuridão. O filme culmina com a destruição do Anel e a queda de Sauron, mas também com o sacrifício e o retorno à paz, além do preço pago pelos heróis em sua jornada.
+                </p>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
