--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,112 @@
             </div>
         </article>
     </section>
+    <section class="actors">
+        <h2 class="title--big">Personagens</h2>
+        <ul class="actors__list">
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/aragorn.png" alt="Aragorn - Viggo Mortensen">
+                <div class="overlay">
+                    <p class="overlay__name">Aragorn - Viggo Mortensen</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/boromir.png" alt="Boromir - Sean Bean">
+                <div class="overlay">
+                    <p class="overlay__name">Boromir - Sean Bean</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/theoden.png" alt="Théoden - Bernard Hill">
+                <div class="overlay">
+                    <p class="overlay__name">Théoden - Bernard Hill</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/Eowyn.png" alt="Eowyn - Miranda Otto">
+                <div class="overlay">
+                    <p class="overlay__name">Eowyn - Miranda Otto</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/faramir.png" alt="Faramir - David Wenham">
+                <div class="overlay">
+                    <p class="overlay__name">Faramir - David Wenham</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/Denethor.png" alt="Denethor - John Noble">
+                <div class="overlay">
+                    <p class="overlay__name">Denethor - John Noble</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/arwen.png" alt="Arwen - Liv Tyler">
+                <div class="overlay">
+                    <p class="overlay__name">Arwen - Liv Tyler</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/elrond.png" alt="Elrond - Hugo Weaving">
+                <div class="overlay">
+                    <p class="overlay__name">Elrond - Hugo Weaving</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/legolas.png" alt="Legolas - Orlando Bloom">
+                <div class="overlay">
+                    <p class="overlay__name">Legolas - Orlando Bloom</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/gimli.png" alt="Gimli - John Rhys-Davies">
+                <div class="overlay">
+                    <p class="overlay__name">Gimli - John Rhys-Davies</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/gandalf.png" alt="Gandalf - Ian McKellen">
+                <div class="overlay">
+                    <p class="overlay__name">Gandalf - Ian McKellen</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/saruman.png" alt="Saruman - Christopher Lee">
+                <div class="overlay">
+                    <p class="overlay__name">Saruman - Christopher Lee</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/Frodo.png" alt="Frodo - Elijah Wood">
+                <div class="overlay">
+                    <p class="overlay__name">Frodo - Elijah Wood</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/sam.png" alt="Samwise - Sean Astin">
+                <div class="overlay">
+                    <p class="overlay__name">Samwise - Sean Astin</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/Merry.png" alt="Merry - Dominic Monaghan">
+                <div class="overlay">
+                    <p class="overlay__name">Merry - Dominic Monaghan</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/Pippin.png" alt="Pippin - Billy Boyd">
+                <div class="overlay">
+                    <p class="overlay__name">Pippin - Billy Boyd</p>
+                </div>
+            </li>
+            <li class="actors__list__item">
+                <img src="../dist/assets/images/elenco-mapa-trailer/Gollum.png" alt="Gollum(Sméagol) - Andy Serkis">
+                <div class="overlay">
+                    <p class="overlay__name">Gollum(Sméagol) - Andy Serkis</p>
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
