Create section watch

--- a/src/index.html
+++ b/src/index.html
@@ -167,5 +167,63 @@
             </li>
         </ul>
     </section>
+    <section class="watch">
+        <h2 class="title--big">Onde assistir</h2>
+        <nav class="watch__tabs">
+            <button data-tab-button="streaming" class="watch__tabs__button watch__tabs__button--is-active"> <!--active-->
+                Serviços de streaming
+            </button>
+            <button data-tab-button="comprar" class="watch__tabs__button">
+                Comprar
+            </button>
+        </nav>
+        <!-- list streaming -->
+        <ul data-tab-id="streaming" class="watch__list watch__list--is-active"><!--active-->
+            <li class="watch__list__item">
+                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/hbo-max-logo.png" alt="HBO Max">
+                <h5 class="watch__list__item__plan text--big">Plano: Standart</h5>
+                <ul class="watch__list__item__options text--medium">
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">2 dispositivos ao mesmo tempo</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">Resolução Full HD</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">30 downloads para curtir off-line</li>
+                </ul>
+                <h5 class="watch__list__item__plan__price text--big">R$ 39,90/mês*</h5>
+            </li>
+            <li class="watch__list__item">
+                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/prime-video-logo.png" alt="Prime Video">
+                <h5 class="watch__list__item__plan text--big">Plano: Mensal</h5>
+                <ul class="watch__list__item__options text--medium">
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">3 telas simultâneas</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">Resolução máxima 4K</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">5 telas diferentes</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">Downloads</li>
+                </ul>
+                <h5 class="watch__list__item__plan text--big">R$ 19,90/mês*</h5>
+            </li>
+        </ul>
+        <!-- list comprar -->
+        <ul data-tab-id="comprar" class="watch__list">
+            <li class="watch__list__item">
+                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/youtube-logo.png" alt="YouTube">
+                <h5 class="watch__list__item__plan text--big">Comprar no YoutTube</h5>
+                <ul class="watch__list__item__options text--medium">
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: A Sociedade do Anel - R$ 22,90</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: As Duas Torres - R$ 22,90</li>
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: O Retorno do Rei - R$ 19,90</li>
+                </ul>
+                <h5 class="watch__list__item__plan text--big">Comprar por R$ 75,70</h5>
+            </li>
+            <li class="watch__list__item">
+                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/appletv-white-logo.png" alt="Apple TV">
+                <h5 class="watch__list__item__plan text--big">Comprar na Apple TV</h5>
+                <ul class="watch__list__item__options text--medium">
+                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis (3 filmes na versão estendida)</li>
+                </ul>
+                <h5 class="watch__list__item__plan text--big">Comprar por R$ 68,70</h5>
+            </li>
+        </ul>
+        <p class="text--mini">*Os preços podem sofrer alterações </p>
+    </section>
+    <script src="../dist/scripts/main.js"></script>
 </body>
 </html>
