Create section faq

--- a/src/index.html
+++ b/src/index.html
@@ -224,6 +224,36 @@
         </ul>
         <p class="text--mini">*Os preços podem sofrer alterações </p>
     </section>
+    <section class="faq">
+        <h2 class="faq__title title--big">Perguntas frequentes</h2>
+        <ul class="faq__list">
+            <li class="faq__list__item text--big">
+                <div class="faq__list__item__question" data-faq-question>
+                    O que é o “Um Anel” e qual é o seu poder?
+                </div>
+                <div class="faq__list__item__answer text--medium">
+                    O Um Anel é um objeto mágico criado pelo Senhor das Trevas, Sauron, com o intuito de dominar toda a Terra-média. Ele possui um poder imenso e corruptor, capaz de controlar outros anéis mágicos e corromper aqueles que tentam usá-lo. O Anel tem uma influência sedutora e destrutiva, corrompendo as mentes dos portadores e tornando-os obcecados por seu poder. Sua destruição é o objetivo central da trama da trilogia, já que Sauron só pode ser derrotado se o Anel for destruído.
+                </div>
+            </li>
+            <li class="faq__list__item text--big">
+                <div class="faq__list__item__question" data-faq-question>
+                    Quem são os Hobbits e qual o papel deles na história?
+                </div>
+                <div class="faq__list__item__answer text--medium">
+                    Os hobbits são uma raça fictícia da Terra-média, parecida com humanos, mas menores e com uma vida simples e tranquila. Eles vivem no Condado e preferem a paz e a natureza. Na trilogia de O Senhor dos Anéis, o hobbit Frodo Bolseiro é o protagonista principal, encarregado de destruir o Um Anel. Outros hobbits importantes incluem Sam, seu leal amigo, e Merry e Pippin, que também desempenham papéis cruciais na luta contra o mal. O fato de hobbits serem pequenos e aparentemente comuns torna-os personagens poderosos na história, mostrando que até os mais humildes podem fazer grandes feitos quando se opõem à escuridão.
+                </div>
+            </li>
+            <li class="faq__list__item text--big">
+                <div class="faq__list__item__question" data-faq-question>
+                    Por que Gollum é tão importante na história?
+                </div>
+                <div class="faq__list__item__answer text--medium">
+                    Gollum é um personagem complexo, que desempenha um papel crucial na jornada do Anel. Ele era originalmente um hobbit chamado Sméagol, mas foi corrompido pelo poder do Um Anel, que ele encontrou e tomou de seu amigo. O Anel o transformou em Gollum, uma criatura obcecada e perturbada, que passou centenas de anos tentando recuperar o Anel. Gollum se torna uma figura chave no destino do Anel, pois ele guia Frodo e Sam até Mordor, mas também tenta enganá-los e tomar o Anel para si. A relação de Gollum com o Anel e sua luta interna entre sua parte boa (Sméagol) e sua parte corrupta (Gollum) são centrais para a moral da história sobre o poder, a corrupção e a redenção.
+                </div>
+            </li>
+        </ul>
+        <img class="faq__img" src="../dist/assets/images/frodo-anel.png" alt="Frodo e anel">
+    </section>
     <script src="../dist/scripts/main.js"></script>
 </body>
 </html>
