--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O Senhor dos Anéis</title>
-    <link rel="stylesheet" href="../dist/styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header class="header">
